# climate

./: .gitignore  AGENTS.md  LICENSE  README.md  README.txt  TODO.md  analytics.py  app.py  fake.py  handoff.md  instructions.md  monte_carlo_demo.py  openmeteo.py  precompute.py  precompute_extremes.py  precompute_extremes_openmeteo.py  precompute_story_cities.py  pyproject.toml  pytest.ini  story_demo.py  story_demo_extremes.py  zoom_temp.py
.github/: FUNDING.yml
app/: story_demo.py  view_locations_map.py
climate/: analytics.py  fake.py  geo.py  io.py  models.py  openmeteo.py  units.py
climate/export/: captions.py  (+2 more)
climate_api/: cache.py  config.py  main.py  release.py  schemas.py  system_stats.py  versioning.py
docs/: concepts-and-glossary.md  project_pipeline_diagrams.md
draft/: monte_carlo_demo.py
experiments/: chat_poc.py  golden_set.yaml  run_golden_set.py
locations/: extra_locations.txt  favorites.txt  locations.csv
registry/: datasets.json  layers.json  maps.json  metrics.json  panels.json
scripts/: annual_cycle.py  api_backend.sh  bench_api_endpoints.py  bench_place_resolver.py  build_frontend_bundle.py  build_live_panels.py  build_ocean_mask.py  compute_exact_global_mean_era5.py  debug_tile_coverage.py  debug_tile_index.py  dev_api_lan.sh  download_era5_daily_t2m_cds.py  explore_dhw_global_max.py  make_borders_overlay.py  make_city_list.py  make_dummy_tiles.py  make_global_series.py  make_latest_anomaly_map_assets.py  make_locations.py  make_montecarlo_experiment.py  make_warming_map_cds.py  make_warming_texture.py  migrate_cds_cache.py  packager.py  packager_dev_make_one_tile_t2m_yearly_mean.py  packager_dev_make_one_tile_t2m_yearly_mean_from_cds.py  precip_metrics.py  precompute_city_rankings.py  precompute_dhw_global_risk.py  precompute_ocean_cities.py  precompute_regional_aggregates.py  precompute_story_cities.py  redis_monitor.py  spike_phase1_fetch_metrics.py  tile_coverage.py  validate_all.py  validate_suite.py  view_locations_map.py
tests/: test_analytics.py  test_analytics_chat.py  test_api_config_cache_logging.py  test_api_e2e.py  test_artifact_store.py  test_build_locations_marine.py  test_chat_canned.py  test_chat_orchestrator.py  test_chat_tools.py  test_dhw_metrics.py  test_geo_modules.py  test_location_index.py  test_main_unit.py  test_ocean_classifier.py  test_ocean_classifier_edge_cases.py  test_packager_dataset_mask.py  test_packager_maps.py  test_packager_registry_regrid.py  test_packager_sparse_risk_aux_mask.py  test_panels_axis_mismatch.py  test_panels_execution_paths.py  test_panels_helpers.py  test_place_resolver_edge_cases.py  test_place_resolver_ocean_override.py  test_place_resolver_regression.py  test_precip_agg_and_postprocess.py  test_registry_dataset_inheritance.py  test_registry_maps_validation.py  test_registry_metrics_validation.py  test_registry_panels_validation.py  test_release_helpers.py  test_release_resolver.py  test_tile_data_store_backend_support.py  test_tiles_layout_cell_grid.py  test_tiles_spec_backend_support.py  test_time_agg.py  test_validate_scripts.py  test_versioning.py
web/: README.md  globe_demo.html  next.config.ts  package-lock.json  package.json
(+242 files in other folders)
