[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate"
version = "0.1.0"
description = "Climate data processing and API tooling"
readme = "README.txt"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
# FastAPI server + active runtime paths (resolver, tiles, caching).
api = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "redis>=5.0",
  "scipy>=1.10",
  "xarray>=2023.0",
  "zstandard>=0.21",
]

# Ocean mask and geospatial preprocessing scripts.
geo = [
  "fiona>=1.9",
  "rasterio>=1.3",
]

# Script-specific extras for active scripts.
make-locations = [
  "scipy>=1.10",
]

packager = [
  "cdsapi>=0.7",
  "jsonschema>=4.0",
  "Pillow>=10.0",
  "xarray>=2023.0",
  "zstandard>=0.21",
]

redis-monitor = [
  "redis>=5.0",
]

tile-coverage = [
  "jsonschema>=4.0",
  "zstandard>=0.21",
]

validate-all = [
  "jsonschema>=4.0",
]

# Test and developer tooling for active code paths.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["climate*", "apps*"]
namespaces = true
