[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "climate"
version = "0.1.0"
description = "Climate data processing and API tooling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "requests>=2.31",
]

[project.optional-dependencies]
# FastAPI server runtime (panel/resolve/nearest endpoints).
api = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.6",
  "redis>=5.0",
  "scipy>=1.10",
  "xarray>=2023.0",
  "zstandard>=0.21",
]

# Ocean mask preprocessing script dependencies.
geo = [
  "fiona>=1.9",
  "rasterio>=1.3",
]

# scripts/build/build_locations.py
make-locations = [
  "scipy>=1.10",
]

# scripts/build/build_dataset_mask.py
make-dataset-mask = [
  "jsonschema>=4.0",
  "xarray>=2023.0",
]

# scripts/build/build_reef_mask.py
make-reef-mask = [
  "fiona>=1.9",
  "rasterio>=1.3",
]

# scripts/build/build_water_mask.py
make-water-mask = [
  "fiona>=1.9",
  "rasterio>=1.3",
]

# scripts/build/build_reef_domain_mask.py
make-reef-domain-mask = [
  "scipy>=1.10",
]

# scripts/build/repack_erddap_cache.py
repack-erddap-cache = [
  "xarray>=2023.0",
  "netCDF4>=1.6",
]

# scripts/build/packager.py
packager = [
  "cdsapi>=0.7",
  "jsonschema>=4.0",
  "Pillow>=10.0",
  "xarray>=2023.0",
  "zstandard>=0.21",
]

# scripts/redis_monitor.py
redis-monitor = [
  "redis>=5.0",
]

# scripts/tile_coverage.py
tile-coverage = [
  "jsonschema>=4.0",
  "zstandard>=0.21",
]

# scripts/validate_all.py and scripts/validate/*.py
validate-all = [
  "jsonschema>=4.0",
]

# Test and developer tooling.
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["climate*"]
namespaces = true
